@@ -42,6 +42,11 @@
 #include <stdlib.h>
 #include <string>
 #include TWEEK_INCLUDE_CORBA_H
+
+#ifdef TWEEK_USE_TAO
+#include <orbsvcs/CosNamingC.h>
+#endif
+
 #include <vpr/Thread/Thread.h>
 #include <vpr/Util/ReturnStatus.h>
 
